add support to prefixed commands

--- a/src/config.json
+++ b/src/config.json
@@ -2,10 +2,12 @@
   "discordToken": "",
   "databaseUrl": "mongodb://localhost/Discord-Bot",
   "botName": "DiscordBot",
+  "botDescription": "au casino du zaap !",
   "defaultPrefix": "%",
   "handlePrefix": true,
   "greetOwner": true,
-  "inviteLink": "https://discordapp.com/oauth2/authorize?&client_id=642935463048642570&scope=bot&permissions=469990567",
+  "discordUrl": "",
+  "inviteLink": "https://discord.com/api/oauth2/authorize?client_id=##########&permissions=##########&scope=applications.commands%20bot",
   "imageURL": "https://i.imgur.com/VEvm3ch.png",
   "thumbnailHelp": "https://i.imgur.com/MeQdXK6.png",
   "thumbnailAuthor": "https://i.imgur.com/jlfQOoY.png",
