--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "discord.js": "^14.7.1",
     "express": "^4.18.2",
+    "format": "^0.2.2",
     "luxon": "^3.2.1",
     "mongoose": "^6.8.3",
     "typescript": "^4.9.4"
