handle multilanguages support and remove useless scripts

--- a/src/config.json
+++ b/src/config.json
@@ -1,13 +1,15 @@
 {
   "discordToken": "",
-  "databaseUrl": "mongodb://localhost/Discord-Bot",
+  "databaseUrl": "mongodb://localhost/",
   "botName": "DiscordBot",
   "botDescription": "au casino du zaap !",
   "defaultPrefix": "%",
   "handlePrefix": true,
+  "displayRank": false,
   "greetOwner": true,
-  "discordUrl": "",
-  "inviteLink": "https://discord.com/api/oauth2/authorize?client_id=##########&permissions=##########&scope=applications.commands%20bot",
+  "discordUrl": "https://discord.gg/",
+  "defaultBalance": 100000,
+  "inviteLink": "https://discord.com/api/oauth2/authorize?client_id=##########&permissions=277025671232&scope=applications.commands%20bot",
   "imageURL": "https://i.imgur.com/VEvm3ch.png",
   "thumbnailHelp": "https://i.imgur.com/MeQdXK6.png",
   "thumbnailAuthor": "https://i.imgur.com/jlfQOoY.png",
